Extract Header component
* refactor: new packages layouts and services
* use LF instead of CRLF
* fix some warnings
* fix java version for maven plugin